--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -47,7 +47,7 @@ body {
     background: var(--base-color-white);
     -webkit-font-smoothing: antialiased;
 
-    overflow:hidden; /* tira a barra de rolagem */
+    /*overflow:hidden; /* tira a barra de rolagem */
 }
 
 .title {
@@ -60,8 +60,9 @@ body {
 
 .main-content {
     display: flex;
-    height: 100vh; /*  "vh" = Viewport Height, traduzindo: Altura da sua Janela. Ele faz a div ocupar a janela inteira */
-    width: 100%
+    /*height: 100vh; /*  "vh" = Viewport Height, traduzindo: Altura da sua Janela. Ele faz a div ocupar a janela inteira */
+    height: 100%;
+    width: 100%;
 }
 
 /* --------------- ############################### --------------- */
