--- a/frontend/src/pages/Register_origin/styles.css
+++ b/frontend/src/pages/Register_origin/styles.css
@@ -1,183 +1,260 @@
-.functions-container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+.register{
+  margin-left: 1rem;
+  margin-right: 1rem;
+  display: inline-block;  
 }
 
 
-.searchForm { 
-    align-items: center;
-    justify-content: center;
-    display:flex;
-    width: 500px;
+/*--- ### HEADER ### ---*/
+
+.header {
+  padding: 1.5rem 0;
+  display: flex;
+  justify-content:space-between; 
 }
 
-.searchForm input{
-    margin-top: 20px;
-    max-width: 800px;
-    width: 100%;
-    height: 40px;
-    color: #333;
-    border: 1px solid #dcdce6;
-    border-radius: 8px;
-    padding: 0 24px;
-    margin-bottom: 16px;
-    font-size: 14px;
+.header a {
+  padding: 0.6rem 0.8rem;
+  font: 500 0.875rem "Poppins", sans-serif;
+  color: #284263;
+  border: 1px solid #284263;
+  border-radius: 8px;
+  transition: 0.2s;
 }
 
-.searchForm button{
-    margin-left: 20px;
-    padding: 7px;
-    background: #b1b1b6;
-    border: 0;
-    border-radius: 5px;
-    color: #FFF;
-    
-    text-decoration: none;
-    transition: 0.2s;
+.header a:hover {
+  background: #DAE8F9;
 }
 
-.functions-container button:hover {
-    background-color: #284263;
+/*--- ### SEARCH ### ---*/
+
+.search {
+  display: flex;
+  justify-content: space-between;
 }
 
+.search input {
+  width: 18rem ;
+  height: 2.8rem;
 
-.functions-container a {
-    margin-left: 100px;
-    padding: 13px;
-    background:#FFF;
-    color: #b1b1b6;
-    font: 400 18px Roboto, sans-serif;
-    border: 1px solid #b1b1b6;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: 0.2s;
-}
+  padding: 0 1.5rem;
+  font: 400 0.875rem "Poppins", sans-serif;
 
-.functions-container a:hover {
-    background-color: #284263;
-    color: #fff
+  border: 1px solid #dcdce6;
+  border-radius: 8px;
 }
 
 
-/* --- CONFIGURAÇÃO ESTILO TABELA --- */
-
-.register-container{
-    margin-left: 20px;
+.search button {
+  padding: 0.6rem 0.9rem;
+  font: 500 0.875rem "Poppins", sans-serif;
+  color: #FFF;
+  background: #284263;
+  border-radius: 8px;
+  border: 1px solid #284263;
 }
 
-.table-container{
-    height: 290px;
-}
-
-
-.register-container table {
-    border-collapse: collapse;
-    font-size: 12px;
-    align-items: center;
-    justify-content: center;
-
-
+.search button:hover {
+  background: #DAE8F9;
+  color: #284263;
 }
 
 
-.register-container table tr{
-    height: 30px;
+/*--- ### CONTENT ### ---*/
+
+
+.content {
+  margin-top: 2rem;
+
 }
 
-.register-container table tr td{
-    border-top: 1px solid #dcdce6;
+.content table {
+  font: 400 0.7rem "Poppins", sans-serif;  
 }
 
-.center {
-    text-align: center;
+.content table tr td {
+  height: 1.8rem;
+  text-align: center;
+  border-top: 1px solid #DAE8F9; 
 }
 
-.btEdit{
-    width: 25px;
-    height: 25px;
-    margin-top: 3px;
-    margin-left: 10px;
-    align-items: center;
-    justify-content: center;
-
-    background: #b1b1b6;
-    border: 0;
-    border-radius: 5px;
-    display: inline-flex;
-    cursor: pointer;
-    transition: filter 0.2s;
+.th-code {
+  font: 700 0.875rem "Poppins", sans-serif;
+  width: 4rem; 
 }
 
-.btEdit:hover{
-    background: #284263;
+.th-description {
+  font: 700 0.875rem "Poppins", sans-serif;
+  width: 12rem; 
 }
 
-.btDelete{
-    width: 25px;
-    height: 25px;
-    margin-top: 3px;
-    margin-left: 10px;
-    align-items: center;
-    justify-content: center;
-
-    background: #b1b1b6;
-    border: 0;
-    border-radius: 5px;
-    display: inline-flex;
-    cursor: pointer;
-    transition: filter 0.2s;
+.th-type {
+  font: 700 0.875rem "Poppins", sans-serif;
+  width: 8rem;
 }
 
-.btDelete:hover{
-    background: #832020;
+.th-action {
+  font: 700 0.875rem "Poppins", sans-serif;
+  width: 0.5rem;
+}
+
+.bt-edit,
+.bt-delete {
+  width: 1.2rem;
+  margin-left: 0.625rem;
+
+  background: #b1b1b6;
+  border-radius: 5px;
+  display: inline-flex;
+  cursor: pointer;
+  transition: filter 0.2s; 
+}
+
+.bt-edit:hover{
+  background: #284263;
+}
+
+.bt-delete:hover{
+  background: #832020;
 }
 
 /* --- CONFIGURAÇÃO ESTILO CONTROL PAGINATE --- */
 
 .pagination{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    margin-top: 8px;
+  margin-top: 0.5rem
 }
 
 .pagination div{
-    margin-left: 18px;
-    display: flex;
+  margin-left: 1rem;
+  margin-bottom: 2rem;
+  width: 2rem;
+  height: 2rem;
 
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    cursor: pointer;
-    font-size: 18px;
-    color: #878787;
-}
-
-
-.pagination div{
-    width: 40px;
-    height: 40px;
-    border-radius: 40%;
-    
-    border: 1px solid #878787 ;
-}
-
-.pagination div:hover{
-    color: #fff;
-    background: #549DED;
-    border-color: #549DED ;
+  cursor: pointer;
+  font: 700 1.125rem "Poppins", sans-serif;
+  color: #878787;
 }
 
 .notFound{
-    display: none;
-    margin-top: 20px;
-    text-align: center;
-
+  display: none;
+  margin-top: 3rem;
+  text-align: center;
+  font: 400 0.8rem "Poppins", sans-serif;
 }
 
 .notFound img{
-    width:300px;
-    margin-top: 40px;
+  width: 15rem;
+  margin-top: 40px;
+}
+
+/* ========================================== */
+/* ============= MEDIA QUERIES ============== */
+/* ========================================== */
+
+/* medium large devices: mais de 670px */
+@media(min-width: 670px) {
+
+  /*--- ### SEARCH ### ---*/
+
+  .search input {
+    width: 27rem ;
+ }
+
+   /*--- ### CONTENT ### ---*/
+  
+   .content {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .content table {
+    width: 36rem;
+  }
+}
+
+/* extra large devices: mais de 1200px */
+@media(min-width: 1200px) {
+
+  /*--- ### HEADER ### ---*/
+
+  .header a {
+    margin-right: 3rem;
+    padding: 0.9rem 1rem;
+  }
+
+  /*--- ### SEARCH ### ---*/
+
+  .search {
+    display: flex;
+    justify-content:center;
+    gap: 1rem
+  }
+
+  .search input {
+    width: 30rem ;
+  }
+
+  /*--- ### CONTENT ### ---*/
+  
+  .content {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .content table {
+    width: 50rem;
+  }
+
+  /*
+  .bt-edit,
+  .bt-delete {
+    width: 1.2rem;
+    margin-left: 0.625rem;
+
+    background: #b1b1b6;
+    border-radius: 5px;
+    display: inline-flex;
+    cursor: pointer;
+    transition: filter 0.2s; 
+  }
+  */
+
+
+  .bt-edit,
+  .bt-delete{
+    width: 1.6rem;
+    height: 1.6rem;
+    margin-top: 0.187rem ;
+
+    align-items: center;
+    justify-content: center;
+
+    background: #b1b1b6;
+    border-radius: 5px;
+    display: inline-flex;
+    cursor: pointer;
+    transition: filter 0.2s; 
+  }
+
+  .bt-edit:hover{
+    background: #284263;
+  }
+
+  .bt-delete:hover{
+    background: #832020;
+  }
+
 }
