correcao dos arquivos para react

--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -27,6 +27,7 @@ img {
 button {
     cursor: pointer;
     text-decoration: none;
+    border: none;
 }
 
 /* ========= VARIABLES ========= */
@@ -84,7 +85,7 @@ main {
 }
 
 #register .content {
-    margin-top: 2rem;  
+    margin-top: 2rem;
 }
 
 
@@ -131,6 +132,7 @@ table tbody tr td:last-child {
   
 table .edit, 
 table .delete {
+    color: #878787;
     font-size: 1.1rem;
 }
   
@@ -141,6 +143,73 @@ table .edit:hover {
 table .delete:hover {
     color: red;
 }
+
+/* Modal Trash ================================= */
+
+.modalTrash {
+    visibility: hidden;
+    opacity: 0;
+  }
+
+.modalTrash.open {
+    height: 100vh;
+    width: 100vw;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
+    background: rgba(0, 0, 0, 0.8);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    visibility: visible;
+    opacity: 1;
+}
+
+.modal {
+
+    background: #F0F2F5;
+    border-radius: 0.313rem;
+    padding: 2.5rem;
+    text-align: center;
+    color: #878787;
+}
+
+.modalImgDelete {
+    margin-bottom: 2rem;
+    font-size: 4.5rem;
+}
+
+.modal h3 {
+    
+    font: 700 1.625rem "Poppins", sans-serif;
+    margin-bottom: 0.5rem;
+}
+
+.modal p {
+    margin-bottom: 2rem;
+}
+
+.modal footer button {
+    padding: 0.75rem 3rem;
+    border-radius: 0.313rem;
+  
+    font-family: IBM Plex Sans;
+    font-weight: 700;
+    font-size: 0.875rem;
+    line-height: 1.625rem;
+    text-transform: uppercase;
+  
+    transition: all .2s;
+  
+    cursor:pointer;
+  }
+
+
 
 /* ========================================== */
 /* ============= MEDIA QUERIES ============== */
